; ModuleID = '/home/carl/AnghaBench/libsodium/test/default/extr_sodium_utils3.c_xmain.c'
source_filename = "/home/carl/AnghaBench/libsodium/test/default/extr_sodium_utils3.c_xmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGABRT = common dso_local global i32 0, align 4
@SIGBUS = common dso_local global i32 0, align 4
@SIGSEGV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %4 = call i32 @randombytes_uniform(i32 100000)
  %5 = add i32 1, %4
  %6 = zext i32 %5 to i64
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = call i8* @sodium_malloc(i64 %7)
  store i8* %8, i8** %2, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = icmp ne i8* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @sodium_mprotect_noaccess(i8* %13)
  %15 = load i8*, i8** %2, align 8
  %16 = call i32 @sodium_mprotect_readwrite(i8* %15)
  %17 = call i32 @segv_handler(i32 0)
  ret i32 0
}

declare dso_local i32 @randombytes_uniform(i32) #1

declare dso_local i8* @sodium_malloc(i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @sodium_mprotect_noaccess(i8*) #1

declare dso_local i32 @sodium_mprotect_readwrite(i8*) #1

declare dso_local i32 @segv_handler(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
